compiler/testData/multiplatform/classScopes/constructorIncorrectSignature/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/constructorIncorrectSignature/jvm.kt:1:12: error: 'impl' class 'Foo' has no corresponding 'header' declaration
The following declaration is incompatible because some members are not implemented:
    public final header class Foo
No implementations are found for members listed below:

    public constructor Foo(s: String)

    The following declaration is incompatible because parameter types are different:
        public constructor Foo(s: Array<String>)

impl class Foo {
           ^
compiler/testData/multiplatform/classScopes/constructorIncorrectSignature/jvm.kt:2:10: error: 'impl' constructor of 'Foo' has no corresponding 'header' declaration
    impl constructor(s: Array<String>)
         ^
